--- a/scss/_tablet-big.scss
+++ b/scss/_tablet-big.scss
@@ -65,20 +65,17 @@
 
     .content {
 
+      h2 {
+        font-size: 25px;
+      }
+
       .content-container {
-
-        h2 {
-
-        }
 
         p {
           font-size: 14px;
         }
       }
     }
-
-
-
   }
 }
 
